# basic_cmake_project

./: CMakeLists.txt  README.md  main.c
libraries/: CMakeLists.txt
libraries/arith/: CMakeLists.txt  arith.c  arith.h
libraries/exp/: .exp.c.swp  CMakeLists.txt  exp.c  exp.h
libraries/logical/: CMakeLists.txt  logical.c  logical.h
libraries/note/: CMakeLists.txt  note.c  note.h
